--- a/Exploring_Data_Patterns.Rmd
+++ b/Exploring_Data_Patterns.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Data Patterns"
 output:
-  html_notebook
-    
+  pdf_document: default
+  html_notebook: default
 ---
 
 This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
