--- a/Exploring_Data_Patterns.Rmd
+++ b/Exploring_Data_Patterns.Rmd
@@ -1,8 +1,10 @@
 ---
 title: "Data Patterns"
 output:
+  word_document: default
   html_notebook: default
   pdf_document: default
+  html_document: default
 ---
 This section covers sessions 1-2, chapters 2-3 of HW.
 Covered topics:<br>
