--- a/linearprogramming.Rmd
+++ b/linearprogramming.Rmd
@@ -43,14 +43,18 @@ Having installed the requried packages, we can run the generic code for linear p
 ```{r}
 library(glpkAPI)
 library(Rglpk)
-
+#first, create an object which is a GLPK problem
 problem <- initProbGLPK(ptrtype = "glpk_prob")
+#this function reads a file and puts it into the object we created
 
 readLPGLPK(problem, "example_lp")
+#just solves the problem
 
 solveSimplexGLPK(problem)
+#prints ranges from a problem object into a file
 
 printRangesGLPK(problem, fname = "report.txt")
+#shows the file
 
 file.show("report.txt")
 
@@ -69,45 +73,84 @@ The problem is described on p.57 of the book.
 We have two models, in the first  we use integer variables, in the second binary integer variables.
 We created furnituretypes_first and furnituretypes_second, check out the models within!
 
+
+However, for an integer linear program our previous workflow doesn't work - it ignores the integers! So here is a crash course in writing functions :P
+
 ```{r Chairs example}
-#having made the files, load them into GLPK
 
-#first, create an object which is a GLPK problem
-chairsprob1<-initProbGLPK(ptrtype = "glpk_prob")
+#first, create a function. 
+SolverLP<-function(model,method="CPLEX_LP",decimal=0)
+{
+  #within the function, activate Rglpk package
+  library(Rglpk)
+  #similar to what we used before, but specify rows like constraints etc.
+  model1.lp<-Rglpk_read_file(model,type=method,
+                             verbose=F)
+  model1.lp.sol<-Rglpk_solve_LP(model1.lp$objective,
+                                model1.lp$constraints[[1]],
+                                model1.lp$constraints[[2]],
+                                model1.lp$constraints[[3]],
+                                model1.lp$bounds,
+                                model1.lp$types,
+                                model1.lp$maximum)
+  #load another package for making tables from a list
+  library(xtable)
+  #make a bunch of objects with the outputs of the model. The outputs are called in the same way as columns of a DF.
+  model1.lp.sol.df<-as.data.frame(model1.lp.sol$solution)
+  model1.lp.sol.df<-rbind(model1.lp.sol.df,c(model1.lp.sol$optimum))
+  #name the rows/cols
+  rownames(model1.lp.sol.df)<-c(attr(model1.lp,"objective_vars_names"),"obj")
+  colnames(model1.lp.sol.df)<-"Solution"
+  #make a new table object
+  table.sol<-xtable(model1.lp.sol.df,digits=decimal)
+  results<-list(sol=model1.lp.sol,df=model1.lp.sol.df)
+  return(results)
+  #make a file with the results and show it
+  printRangesGLPK(model1.lp.sol, fname = "report.txt")
+  file.show("report.txt")
+}
 
-#this function reads a file and puts it into the object we created
-readLPGLPK(chairsprob1,"furnituretypes_first")
-
-#just solves the problem
-solveSimplexGLPK(chairsprob1)
-
-#prints ranges from a problem object into a file
-printRangesGLPK(chairsprob1, fname = "chairs1.txt")
-
-#shows the file
-file.show("chairs1.txt")
-
-#same for the second chairs problem.
-
-chairsprob2<-initProbGLPK(ptrtype = "glpk_prob")
-readLPGLPK(chairsprob2,"furnituretypes_second")
-solveSimplexGLPK(chairsprob2)
-printRangesGLPK(chairsprob2, fname = "chairs2.txt")
-file.show("chairs2.txt")
 ```
 
 
+if you run the code snip about, you'll get a new function in the environment to the right.
+
+now to make an LP (using chairs example from the LP book)
 ```{r}
-library(glpkAPI)
-library(Rglpk)
+chairsprob1<-SolverLP("furnituretypes_first")
+SolverLP("furnituretypes_first")
 
-minmax<-initProbGLPK(ptrtype = "glpk_prob")
 
-readLPGLPK(minmax,"minimax")
+#and the second one.
+chairsprob2<-SolverLP("furnituretypes_second")
+chairsprob2
 
-solveSimplexGLPK(minmax)
+#how to read this?
+#the leftmost output is the R console, disregard it for now. The two dataframes show the first and the second solutions, respectively. THe second one has a higher optimum, in accordance with new constraints.
+#unfortunately, it is not possible to get the sensitivity report with this method, because the object is not associated with GLPK API anymore.
 
-printRangesGLPK(golp,fname="sminmax.txt")
+
+```
+
+Another thing you'll be learning in the next weeks are problems where there are several goals. The first type are goal optimization problems. Say I want to build 3 houses and spend 100 dollars, I can deviate from one or both this goals to an extent. This can be modeled:
+
+```{r}
+#first, create an object which is a GLPK problem
+golp <- initProbGLPK(ptrtype = "glpk_prob")
+#this function reads a file and puts it into the object we created
+
+readLPGLPK(golp, "GOLP")
+#just solves the problem
+
+solveSimplexGLPK(golp)
+#prints ranges from a problem object into a file
+
+printRangesGLPK(golp, fname = "golpa.txt")
+#shows the file
+
+file.show("golpa.txt")
+
+#again the integers are ignored!
 
 ```
 
